# physics-engine-

./: .gitignore  CMakeLists.txt  README.md
include/collision/: collision_detector.h  spatial_hash.h
include/constraints/: constraint.h  distance_constraint.h  spring_constraint.h
include/core/: rigid_body.h  world.h
include/math/: mat2.h  vec2.h
include/solver/: constraint_solver.h
src/collision/: collision_detector.cpp  spatial_hash.cpp
src/constraints/: distance_constraint.cpp  spring_constraint.cpp
src/core/: rigid_body.cpp  world.cpp
src/math/: mat2.cpp  vec2.cpp
src/solver/: constraint_solver.cpp
